--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <h2>📧 お問い合わせ</h2>
             <p>ご不明な点がございましたら、お気軽にお問い合わせください。</p>
             <p style="margin-top: 15px; font-size: 18px;">
-                <a href="mailto:your-email@example.com">your-email@example.com</a>
+                <a href="mailto:your-email@example.com">hibinokou@icloud.com</a>
             </p>
         </div>
 
