--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
             <p style="margin-top: 10px;">
                 <a href="privacy_policy.html">プライバシーポリシー</a>
             </p>
+            <p>© 2025 kou works</p>
+<p>開発者: kou works</p>
         </div>
     </div>
 </body>
