--- a/index.html
+++ b/index.html
@@ -215,13 +215,11 @@
         </div>
 
         <div class="footer">
-            <p>© 2025 展示会名刺</p>
-            <p style="margin-top: 10px;">
-                <a href="privacy_policy.html">プライバシーポリシー</a>
-            </p>
-            <p>© 2025 kou works</p>
-<p>開発者: kou works</p>
-        </div>
+    <p>© 2025 kou works</p>
+    <p style="margin-top: 10px;">
+        <a href="privacy.html">プライバシーポリシー</a>
+    </p>
+</div>
     </div>
 </body>
 </html>
